--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <!-- Logo -->
     <img width="100px" src="images/Zoom-Logo.png"/>
 
-    <!-- Icons: Magnifying Glass and Three Dots -->
+    <!-- Icons -->
     <div class="flex items-center gap-4">
       <!-- Magnifying Glass -->
       <button class="text-2xl text-slate-700">
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <section class="flex flex-col md:flex-row justify-between items-center py-10 md:py-10 gap-x-10 px-6 md:px-14">
+    <section class="flex flex-col border-b-4 border-b-cyan-500 md:flex-row justify-between items-center py-10 md:py-10 gap-x-10 px-6 md:px-14">
       <!-- Left Content -->
       <div class="text-center md:text-left max-w-lg">
         <h2 class="text-2xl font-bold md:text-4xl pb-5">
@@ -83,12 +83,10 @@
   </div>
 </section>
   
-      
-  
-    </section>
 
-    <section class="flex flex-col md:flex-row justify-between items-center py-10 bg-neutral-100 px-6 md:px-14">
-      <!-- Text Section -->
+ <!-- Text Section -->
+    <section class=" flex flex-col md:flex-row justify-between items-center py-10 px-6 md:px-14">
+     
       <h3 class="text-center md:text-left text-2xl font-semibold pb-6 md:pb-0 max-w-md">
         Businesses around the globe choose Zoom <br>
         <span class="text-sky-400 font-medium text-sm">Read their stories!</span>
